--- a/src/samples/Twitter/index.html
+++ b/src/samples/Twitter/index.html
@@ -30,7 +30,8 @@
          </div>
       </div>
    </div>
-
+    <h1>Broken due to Twitter API 1.1 change</h1>
+    <a href="https://blog.twitter.com/2012/changes-coming-to-twitter-api">Changes coming in Version 1.1 of the Twitter API</a>
    <div class="container">
       <div class="row well">
          <div class="span12">
