--- a/src/samples/Pong/Web/index.html
+++ b/src/samples/Pong/Web/index.html
@@ -5,7 +5,7 @@
   <script type="text/javascript" src="page.js"></script>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
 </head>
-<body>
+<body style="background-color: gray;">
   <h1><!-- [title] -->F# Pong Clock<!-- [/title] --></h1>
 
   <!-- [body] -->
